namespaces/live.cloud-platform.service.justice.gov.uk/how-out-of-date-are-we/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: how-out-of-date-are-we
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/application: "Cloud Platform How Out Of Date Are We"
    cloud-platform.justice.gov.uk/owner: "Cloud Platform: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cloud-platform-how-out-of-date-are-we"
    cloud-platform.justice.gov.uk/slack-channel: "cloud-platform"
