namespaces/live.cloud-platform.service.justice.gov.uk/how-out-of-date-are-we/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: how-out-of-date-are-we
  namespace: how-out-of-date-are-we
spec:
  replicas: 1
  selector:
    matchLabels:
      app: how-out-of-date-are-we-app
  template:
    metadata:
      labels:
        app: how-out-of-date-are-we-app
    spec:
      containers:
        - name: nginx
          image: bitnami/nginx
          volumeMounts:
            - name: my-volume
              mountPath: /app/index.html
              subPath: index.html
              readOnly: true
            - name: my-volume
              mountPath: /opt/bitnami/nginx/conf/bitnami/redirect.conf
              subPath: redirect.conf
              readOnly: true
          ports:
          - containerPort: 4567
      volumes:
        - name: my-volume
          configMap:
            name: config-data
            items:
              - key: index.html
                path: index.html
              - key: redirect.conf
                path: redirect.conf
