namespaces/live.cloud-platform.service.justice.gov.uk/how-out-of-date-are-we/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: how-out-of-date-are-we-service
  labels:
    app: how-out-of-date-are-we-service
spec:
  ports:
  - port: 4567
    name: https
    targetPort: 4567
  selector:
    app: how-out-of-date-are-we-app
